--- a/ProjectCapstone.html
+++ b/ProjectCapstone.html
@@ -219,8 +219,8 @@ $(document).ready(function () {
 ##   No Sale      Sale 
 ## 93.114869  6.885131</code></pre>
 <pre><code>## 
-##   No Sale      Sale 
-## 93.114869  6.885131</code></pre>
+## No Sale    Sale 
+##  93.115   6.885</code></pre>
 <pre><code>## [1] &quot;Total number of variables is: 9&quot;</code></pre>
 <pre><code>## [1] &quot;Number of days :  31&quot;</code></pre>
 <pre><code>## [1] &quot;Unique Agents :  689&quot;</code></pre>
@@ -249,82 +249,82 @@ $(document).ready(function () {
 <pre><code>## # A tibble: 689 x 2
 ##    AgentID PercentOfTot
 ##      &lt;chr&gt;        &lt;dbl&gt;
-## 1     5550         0.04
-## 2     5566         0.00
-## 3     5600         0.00
-## 4     5627         0.06
-## 5     5641         0.00
-## 6     5658         0.00
-## 7     5675         0.33
-## 8     5695         0.02
-## 9     5704         0.00
-## 10    5707         0.01
+## 1     5550       0.0383
+## 2     5566       0.0006
+## 3     5600       0.0018
+## 4     5627       0.0606
+## 5     5641       0.0046
+## 6     5658       0.0028
+## 7     5675       0.3318
+## 8     5695       0.0187
+## 9     5704       0.0009
+## 10    5707       0.0122
 ## # ... with 679 more rows</code></pre>
 <pre><code>## [1] &quot;Percent of TFN, Pr(TFN)&quot;</code></pre>
 <pre><code>## # A tibble: 5,255 x 2
 ##           TFN PercentOfTot
 ##         &lt;dbl&gt;        &lt;dbl&gt;
-## 1  2153373582         0.01
-## 2  2153373587         0.00
-## 3  2153373636         0.00
-## 4  2153373637         0.00
-## 5  2153373640         0.10
-## 6  2153373641         0.09
-## 7  2153373642         0.00
-## 8  2153373643         0.00
-## 9  2153373644         0.00
-## 10 2153373645         0.00
+## 1  2153373582       0.0092
+## 2  2153373587       0.0009
+## 3  2153373636       0.0024
+## 4  2153373637       0.0006
+## 5  2153373640       0.1004
+## 6  2153373641       0.0897
+## 7  2153373642       0.0040
+## 8  2153373643       0.0018
+## 9  2153373644       0.0049
+## 10 2153373645       0.0046
 ## # ... with 5,245 more rows</code></pre>
 <pre><code>## [1] &quot;Percent of CallSkill, Pr(CallSkill)&quot;</code></pre>
 <pre><code>## # A tibble: 24 x 2
 ##    CallSkill PercentOfTot
 ##        &lt;int&gt;        &lt;dbl&gt;
-## 1        100         2.96
-## 2        101         5.18
-## 3        102         4.70
-## 4        103         3.56
-## 5        108         1.85
-## 6        117         0.72
-## 7        210         0.95
-## 8        222         1.87
-## 9        300         6.46
-## 10       301        18.88
+## 1        100       2.9645
+## 2        101       5.1778
+## 3        102       4.7009
+## 4        103       3.5607
+## 5        108       1.8524
+## 6        117       0.7233
+## 7        210       0.9489
+## 8        222       1.8687
+## 9        300       6.4606
+## 10       301      18.8795
 ## # ... with 14 more rows</code></pre>
 <pre><code>## [1] &quot;Percent of OrigSkill, Pr(OrigSkill)&quot;</code></pre>
 <pre><code>## # A tibble: 17 x 2
 ##    OriginalSkill PercentOfTot
 ##            &lt;int&gt;        &lt;dbl&gt;
-## 1              0         0.02
-## 2            222         2.82
-## 3            300         9.43
-## 4            301        31.68
-## 5            302        18.08
-## 6            303        14.26
-## 7            308         8.53
-## 8            310         0.04
-## 9            313         1.62
-## 10           315         0.41
-## 11           317         5.34
-## 12           328         2.55
-## 13           350         1.52
-## 14           500         2.75
-## 15           501         0.68
-## 16           513         0.23
-## 17           999         0.03</code></pre>
+## 1              0       0.0236
+## 2            222       2.8151
+## 3            300       9.4250
+## 4            301      31.6819
+## 5            302      18.0824
+## 6            303      14.2591
+## 7            308       8.5346
+## 8            310       0.0355
+## 9            313       1.6235
+## 10           315       0.4062
+## 11           317       5.3421
+## 12           328       2.5463
+## 13           350       1.5240
+## 14           500       2.7520
+## 15           501       0.6804
+## 16           513       0.2345
+## 17           999       0.0337</code></pre>
 <pre><code>## [1] &quot;Percent of CableCompany, Pr(CableCompany)&quot;</code></pre>
 <pre><code>## # A tibble: 323 x 2
 ##                                CableCompany PercentOfTot
 ##                                       &lt;chr&gt;        &lt;dbl&gt;
-## 1                                                   0.07
-## 2                                10Channels         0.00
-## 3                      2TurnItOn - Outbound         0.05
-## 4                                     5LINX         0.03
-## 5                732 Numbers Charter Retail         0.00
-## 6                      732Numbers Earthlink         0.06
-## 7  76766 -\240nuHome Promotions - MSO - TWC         0.01
-## 8     80191 - nuHome Promotions - MSO - COX         0.01
-## 9                                       ADT         0.01
-## 10                                      AOL         0.00
+## 1                                                 0.0658
+## 2                                10Channels       0.0003
+## 3                      2TurnItOn - Outbound       0.0533
+## 4                                     5LINX       0.0312
+## 5                732 Numbers Charter Retail       0.0028
+## 6                      732Numbers Earthlink       0.0569
+## 7  76766 -\240nuHome Promotions - MSO - TWC       0.0104
+## 8     80191 - nuHome Promotions - MSO - COX       0.0101
+## 9                                       ADT       0.0070
+## 10                                      AOL       0.0003
 ## # ... with 313 more rows</code></pre>
 <pre><code>## [1] &quot;Percent of Affiliate, Pr(Affiliate)&quot;</code></pre>
 <pre><code>## # A tibble: 89 x 2
@@ -504,7 +504,8 @@ $(document).ready(function () {
 ## 9       210      5.52
 ## 10      212      3.03
 ## # ... with 294 more rows</code></pre>
-<p>Calculate Bayesian probability for a specific call Pr(Sale | ) =</p>
+<p>Calculate Bayesian probability for a specific call</p>
+<p>Function to predict probability of sale in real time</p>
 </div>
 
 
